--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/images/logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+
+    <meta property ="og:type" content ="website"/>
+    <meta property ="og:url" content ="https://ronewa-medicine-tracker.herokuapp.com"/>
+    <meta property ="og:title" content ="medicine-tracker"/>
+    <meta property ="og:description" content ="Mavhungu Ronewa's Medicine-tracker."/>
+    <meta property ="og:image" content ="https://ronewa-medicine-tracker.herokuapp.com/%PUBLIC_URL%/favicon.ico"/>
+    <meta property ="twitter:card" content ="summary_large_image"/>
+    <meta property ="twitter:url" content ="https://ronewa-medicine-tracker.herokuapp.com"/>
+    <meta property ="twitter:title" content ="ronewam medicine tracker"/>
+    <meta property ="twitter:description" content ="Mavhungu Ronewa's Medicine-tracker."/>
+    <meta property ="twitter:image" content ="https://ronewa-medicine-tracker.herokuapp.com/%PUBLIC_URL%/favicon.ico"/>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
