--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
 
     <meta property ="og:type" content ="website"/>
     <meta property ="og:url" content ="https://ronewa-medicine-tracker.herokuapp.com"/>
-    <meta property ="og:title" content ="medicine-tracker"/>
+    <meta property ="og:title" content ="Medicine-tracker"/>
     <meta property ="og:description" content ="Mavhungu Ronewa's Medicine-tracker."/>
     <meta property ="og:image" content ="https://ronewa-medicine-tracker.herokuapp.com/%PUBLIC_URL%/favicon.ico"/>
     <meta property ="twitter:card" content ="summary_large_image"/>
