--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -51,8 +51,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="/socket.io/socket.io.js"></script>
-    <script>
+    <!--script>
       const socket = io();
-    </script>
+    </!--script-->
   </body>
 </html>
